feat(page-generator) now can page Generator

--- a/nasdaq-news-summarizer/build.gradle
+++ b/nasdaq-news-summarizer/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17) // ✅ Java 17로 컴파일
+        languageVersion = JavaLanguageVersion.of(17) //  Java 17로 컴파일
     }
 }
 group = 'org.example'
